# monk

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
monk/: __init__.py  chat.py  cli.py  llm.py  midi.py  preview.py  project.py  render.py  rpp.py
monk/templates/: minimal.rpp
