[project]
name = "monk-music"
version = "0.1.0"
description = "LLM-driven CLI for music production"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "mido>=1.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
monk = "monk.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["monk*"]

[tool.setuptools.package-data]
"*" = ["*.rpp"]
